--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 PORT=3000
-SUPABASE_URL="YOUR_SUPABASE_URL_HERE"
+SUPABASE_URL="https://erhqwqoosoaxwtlveayq.supabase.co"
 SUPABASE_KEY="YOUR_SUPABASE_KEY_HERE"
+INGESTION_API_KEY="YOUR_SECRET_API_KEY"
