--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@langchain/core": "^1.1.28",
+    "@langchain/deepseek": "^1.0.14",
     "@supabase/supabase-js": "^2.97.0",
     "cors": "^2.8.6",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "joi": "^18.0.2",
-    "mongoose": "^9.2.2"
+    "json2csv": "^6.0.0-alpha.2",
+    "mongoose": "^9.2.2",
+    "multer": "^2.0.2",
+    "pg": "^8.19.0",
+    "xlsx": "^0.18.5",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@faker-js/faker": "^10.3.0",
