--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^15.0.0",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
