--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
   "description": "",
   "dependencies": {
     "@langchain/core": "^1.1.28",
-    "@langchain/deepseek": "^1.0.14",
+    "@langchain/groq": "^1.1.2",
     "@supabase/supabase-js": "^2.97.0",
     "cors": "^2.8.6",
     "csv-parser": "^3.2.0",
